[package]
name = "isomdl-18013-7"
version = "0.1.0"
edition = "2021"
authors = ["Spruce Systems, Inc."]
license = "MIT OR Apache-2.0"
description = "ISOMDL 18013-7 Rust library"
repository = "https://github.com/spruceid/isomdl-18013-7/"
documentation = "https://docs.rs/isomdl-18013-7/"

[dependencies]
anyhow = "1.0.66"
oidc4vp = { git = "https://github.com/spruceid/oidc4vp-rs", rev="9343406"}
openidconnect = { git = "https://github.com/ramosbugs/openidconnect-rs", branch = "main" }
isomdl = { git = "ssh://git@github.com/spruceid/isomdl.git", rev = "fce4e07"}
reqwest = { version = "0.11.13", default-features = false }
serde = { version = "1.0.147", features = ["derive"] }
serde_urlencoded = "0.7.1"
serde_with = "2.1.0"
siop = { git = "https://github.com/spruceid/siop-rs" }
ssi = { version = "0.6" , default-features = false, features = ["w3c"] }
did-ion = { version = "0.2" }
did-web = { version = "0.2", default-features = false }
did-jwk = { version = "0.1" }
url = { version = "2.3.1", features = ["serde"] }
uuid = { version = "1.2.2", features = ["v4"] }
tracing = "0.1.37"
serde_json = "1.0.89"
chrono = "0.4.23"
serde_cbor = "0.11.2"
base64 = "0.13.1"
p256 = "0.13.2"
signature = "2.1.0"
